--- a/tox.ini
+++ b/tox.ini
@@ -4,7 +4,8 @@ envlist = py{37,36,35,34,27,py3,py}
 [testenv]
 deps = pytest-cov
        py{37,36,35,27,py3,py}: pytest-timeout
-       py{34}: pytest-timeout<1.2.1
+       py{34}: pytest-timeout==1.2.0
+       py{34}: pytest==3.2
 commands = py.test {posargs}
 
 [pytest]
