--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,6 +39,7 @@ environment:
 
 install:
   - SET "PATH=%python_path%;%python_path%\Scripts;%PATH%"
+  - python -m pip install --upgrade pip
   - pip install tox
 
 test_script:
