--- a/appveyor.yml
+++ b/appveyor.yml
@@ -42,6 +42,7 @@ install:
   - echo %PATH%
   - python -m pip install --upgrade pip
   - pip install tox
+  - pip list
 
 test_script:
-  tox -e %tox_env%
+  tox -r -e %tox_env%
