--- a/appveyor.yml
+++ b/appveyor.yml
@@ -39,8 +39,7 @@ environment:
 
 install:
   - SET PATH=%python_path%;%python_path%\Scripts;%PATH%
-  - pip install tox
-  - .tox\%tox_env%\bin\pip install --upgrade pip
+  - pip install tox -U --force-reinstall
 
 test_script:
   tox -e %tox_env%
