Setup Travis to support Windows

--- a/tox.ini
+++ b/tox.ini
@@ -7,7 +7,9 @@ deps =
     flake8
     pytest-cov
     pytest-timeout
+    flaky
 extras = watchmedo
 commands =
     python -m flake8 docs tools src tests
     python -bb -m pytest {posargs}
+
